# RdataStation

./: .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc  CODE_REVIEW_REPORT.md  CODE_WIKI.md  README.md  README.zh-CN.md  WorkbenchView.git.txt  index.html  package.json  pnpm-lock.yaml  tsc-errors.txt  tsconfig.json  tsconfig.node.json  typecheck-errors.txt  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  build_errors.txt  cargo_check_err2.txt  fix_commands.py  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/insight-rules/column/: boolean-ratio.rule.toml  datetime-monthly.rule.toml  datetime-range.rule.toml  histogram.rule.toml  null-check.rule.toml  numeric-basic.rule.toml  numeric-stats.rule.toml  text-frequency.rule.toml  text-length.rule.toml
src-tauri/insight-rules/multi/: correlation.rule.toml  cross-tab.rule.toml  grouped-stats.rule.toml  scatter-sample.rule.toml
src-tauri/insight-rules/quality/: column-quality-score.rule.toml
src-tauri/insight-rules/table/: table-column-overview.rule.toml  table-null-overview.rule.toml  table-quality-overview.rule.toml  table-row-count.rule.toml
src-tauri/migrations/connection_metadata/: 001_init.sql  002_add_cache_version_and_compression.sql  003_add_fts_search.sql  004_refactor_to_normalized.sql  005_normalized_fts_and_cascade.sql  006_add_metadata_index.sql  007_incremental_sync.sql  008_add_is_primary_column.sql  009_jdbc_metadata_alignment.sql  010_enterprise_statistics_and_display.sql
src-tauri/migrations/global/: 001_init.sql  002_add_schema_name.sql  003_add_duckdb_fed.sql  004_add_metadata_path.sql  005_add_server_version.sql  006_add_app_logs.sql  007_add_project_path_index.sql  008_add_data_source_module.sql  009_add_id_prefix_convention.sql  010_add_auth_method.sql  011_add_config_indexes.sql  012_add_network_auth_config_id.sql  013_add_native_drivers.sql  014_fix_driver_id_alignment.sql  016_add_driver_properties.sql  017_add_network_capabilities.sql
src-tauri/migrations/project_analysis/: 001_init.sql  002_insight_storage.sql
src-tauri/migrations/project_meta/: 001_init.sql  002_refactor_connections.sql  003_refactor_query_history.sql  004_add_schema_name.sql  005_add_duckdb_fed.sql  006_add_metadata_path.sql  007_analytics_resources.sql  008_insight_snapshots.sql  009_mock_generation.sql  010_add_data_source_module.sql  011_add_id_prefix_snapshot.sql  012_add_auth_method.sql  013_add_config_indexes.sql  014_add_network_auth_config_id.sql  015_fix_driver_id_alignment.sql  016_ensure_data_source_tables.sql
src-tauri/src/: lib.rs  main.rs  src目录架构.txt
src-tauri/src/adapters/: mod.rs
src-tauri/src/api/: dto.rs  mod.rs
src-tauri/src/commands/: analytics_resource_commands.rs  cache_warming_commands.rs  connection_commands.rs  data_source_commands.rs  driver_commands.rs  logging_commands.rs  memory_commands.rs  metadata_cache_commands.rs  metadata_commands.rs  mock_commands.rs  mock_persistence_commands.rs  mod.rs  navigator_commands.rs  performance_commands.rs  plugin_commands.rs  port_commands.rs  project_commands.rs  project_store_commands.rs  result_commands.rs  scratchpad_commands.rs  sql_commands.rs  sql_parser_commands.rs  sql_template_commands.rs  system_commands.rs
src-tauri/src/core/: api_version.rs  arrow.rs  crypto.rs  duckdb.rs  duckdb_old.rs.bak  error.rs  macros.rs  mod.rs  models.rs  port_negotiation.rs  stream.rs  types.rs
src-tauri/src/docs/: 01-architecture-overview.md  02-directory-structure.md  03-module-dependencies.md  04-data-flow.md  05-driver-architecture.md  06-storage-architecture.md  07-upgrade-strategy.md  08-optimization-plan.md  09-development-guide.md  10-api-reference.md  11-plugin-system.md  README.md  add-datasource-deep-analysis-fixes.md  data-source-module-optimization-v0.6.1.md  duckdb-engine-architecture.md  metadata-lazy-loading-design.md
src-tauri/src/mock/: engine.rs  generators.rs  models.rs  (+4 more)
src-tauri/tests/: BEST_PRACTICES.md  TEST_REPORT.md  auth_store_tests.rs  connection_commands_tests.rs  connection_config_tests.rs  connection_integration_tests.rs  connection_manager_tests.rs  connection_store_tests.rs  connector_tests.rs  data_source_commands_integration_tests.rs  data_source_tests.rs  driver_integration.rs  driver_registry_tests.rs  e2e_add_datasource_tests.rs  error_propagation_snapshot_tests.rs  file_database_tests.rs  four_db_connection_tests.rs  metadata_driver_tests.rs  mysql_integration_tests.rs  persistence_helpers_tests.rs  pool_management_tests.rs  postgresql_tests.rs  real_db_integration_tests.rs  specta_export.rs
(+985 files in other folders)
